@@ -1513,7 +1513,10 @@ class WC_Payments_API_Client {
 		}
 		$url .= '/' . self::ENDPOINT_REST_BASE . '/' . $api;
 
-		$body = null;
+		$headers                 = [];
+		$headers['Content-Type'] = 'application/json; charset=utf-8';
+		$headers['User-Agent']   = $this->user_agent;
+		$body                    = null;
 
 		$redacted_params = WC_Payments_Utils::redact_array( $params, self::API_KEYS_TO_REDACT );
 		$redacted_url    = $url;
@@ -1522,8 +1525,8 @@ class WC_Payments_API_Client {
 			$url          .= '?' . http_build_query( $params );
 			$redacted_url .= '?' . http_build_query( $redacted_params );
 		} else {
-			// Encode the request body as JSON.
-			$body = wp_json_encode( $params );
+			$headers['Idempotency-Key'] = $this->uuid();
+			$body                       = wp_json_encode( $params );
 			if ( ! $body ) {
 				throw new API_Exception(
 					__( 'Unable to encode body for request to WooCommerce Payments API.', 'woocommerce-payments' ),
@@ -1533,12 +1536,12 @@ class WC_Payments_API_Client {
 			}
 		}
 
-		// Create standard headers.
-		$headers                 = [];
-		$headers['Content-Type'] = 'application/json; charset=utf-8';
-		$headers['User-Agent']   = $this->user_agent;
-
 		Logger::log( "REQUEST $method $redacted_url" );
+		Logger::log(
+			'HEADERS: '
+			. var_export( $headers, true ) // phpcs:ignore WordPress.PHP.DevelopmentFunctions.error_log_var_export
+		);
+
 		if ( null !== $body ) {
 			Logger::log(
 				'BODY: '
@@ -1813,5 +1816,17 @@ class WC_Payments_API_Client {
 			$domain_name,
 			null !== $blog_id ? " blog_id $blog_id" : ''
 		);
+	}
+
+	/**
+	 * Returns a v4 UUID.
+	 *
+	 * @return string
+	 */
+	private function uuid() {
+		$arr    = array_values( unpack( 'N1a/n4b/N1c', random_bytes( 16 ) ) );
+		$arr[2] = ( $arr[2] & 0x0fff ) | 0x4000;
+		$arr[3] = ( $arr[3] & 0x3fff ) | 0x8000;
+		return vsprintf( '%08x-%04x-%04x-%04x-%04x%08x', $arr );
 	}
 }
