@@ -1,6 +1,7 @@
 *** WooCommerce Payments Changelog ***
 
 = 3.3.0 - 2021-xx-xx =
+* Add - Add Idempotency Key to POST headers.
 * Add - Add dispute order notes to Edit Order page.
 * Update - Updated @woocommerce/components to remove ' from negative numbers on csv files
 * Update - Avoid having invalid intervals (greater than 1 year) in subscription products.
